# Will_Horne_Solo_Project

./: README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  setup-checkpoint.py
IR_Datasets/: S-cerevisiae_EXF-6761.xlsx
notebooks/: Horne_Project_Presentation.ipynb  test_file.csv
notebooks/.ipynb_checkpoints/: Horne_Project_Presentation-checkpoint.ipynb  test_file-checkpoint.csv
notebooks/archive/: A-baumannii_AB5075_Aq_-80_init.csv  A-baumannii_AB5075_Aq_-80_zero.csv  A-baumannii_AB5075_D28-De_-80_init.csv  A-baumannii_AB5075_D28-De_-80_zero.csv  A-baumannii_AB5075_D28-De_RT_init.csv  A-baumannii_AB5075_D28-De_RT_zero.csv  A-baumannii_AB5075_D6-De_RT_init.csv  A-baumannii_AB5075_D6-De_RT_zero.csv  A-baumannii_AB5075_De_-80_zero.csv  A-baumannii_AB5075_De_RT_init.csv  A-baumannii_AB5075_De_RT_zero.csv  Edited_A-baumannii_AB5075_Aq_-80_init.csv  Edited_A-baumannii_AB5075_Aq_-80_zero.csv  Edited_A-baumannii_AB5075_Aq_RT_zero.csv  Edited_A-baumannii_AB5075_D28-De_-80_init.csv  Edited_A-baumannii_AB5075_D28-De_-80_zero.csv  Edited_A-baumannii_AB5075_D28-De_RT_init.csv  Edited_A-baumannii_AB5075_D28-De_RT_zero.csv  Edited_A-baumannii_AB5075_D6-De_-80_init.csv  Edited_A-baumannii_AB5075_D6-De_-80_zero.csv  Edited_A-baumannii_AB5075_De_-80_init.csv  Edited_A-baumannii_AB5075_De_-80_zero.csv  Edited_A-baumannii_AB5075_De_RT_zero.csv  (+18 more)
tests/: test_will_horne_solo_project.py
will_horne_solo_project/: __init__.py  display.py  extract.py  local_functions.py  process.py
will_horne_solo_project.egg-info/: SOURCES.txt  top_level.txt
(+13 files in other folders)
